moved index to root folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Liquefaction</title>
   <!-- Global styles -->
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
   <!-- Lottie player for our hero animation -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
@@ -14,7 +14,7 @@
     <nav>
       <a href="index.html">Liquefaction</a>
       <div class="nav-right">
-        <a href="what-is-liquefaction.html">How it works</a>
+        <a href="pages/what-is-liquefaction.html">How it works</a>
         <a href="https://www.computer.org/csdl/proceedings-article/sp/2025/223600b437/26hiUjFXiP6" target="_blank" class="external-link">Research Paper</a>
       </div>
     </nav>
@@ -41,22 +41,22 @@
         <div class="builders-scroll">
           <div class="builder-item">
             <a href="https://protofire.io">
-                <img src="../assets/logos/protofire.svg" alt="Protofire Logo" />
+                <img src="./assets/logos/protofire.svg" alt="Protofire Logo" />
             </a>
           </div>
           <div class="builder-item">
             <a href="https://oasis.net">
-              <img src="../assets/logos/oasis.svg" alt="Oasis Labs Logo" />
+              <img src="./assets/logos/oasis.svg" alt="Oasis Labs Logo" />
             </a>
           </div>
           <div class="builder-item">
             <a href="https://semiliquid.com">
-                <img src="../assets/logos/semiliquid.svg" alt="SemiLiquid Logo" />
+                <img src="./assets/logos/semiliquid.svg" alt="SemiLiquid Logo" />
             </a>
           </div>
           <div class="builder-item">
             <a href="https://takemyape.com">
-                <img src="../assets/logos/TMA.svg" alt="TMA Logo" />
+                <img src="./assets/logos/TMA.svg" alt="TMA Logo" />
             </a>
           </div>
         </div>
@@ -115,6 +115,6 @@
   </footer>
 
   <!-- Site scripts -->
-  <script src="../js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
