--- a/pages/what-is-liquefaction.html
+++ b/pages/what-is-liquefaction.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Liquefaction</a>
+            <a href="../index.html">Liquefaction</a>
             <div class="nav-right">
-                <a href="what-is-liquefaction.html">How It Works</a>
+                <a href="what-is-liquefaction.html">What is Liquefaction?</a>
                 <a href="https://www.computer.org/csdl/proceedings-article/sp/2025/223600b437/26hiUjFXiP6" target="_blank" class="external-link">Research Paper</a>
             </div>
         </nav>
